test/typeerrors/ex14.act
def f(x):
    return g(x)

def g(x,y):
    return x+y

