test/typeerrors/ex14.golden
Building file ../test/typeerrors/ex14.act
  Compiling ex14.act for release

ERROR: Error when compiling ex14 module: Type error

  |
4 |def g(x,y):
  |        ^
Keyword element 'y' is not found

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

